--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fleet",
   "private": true,
-  "version": "0.0.0",
-  "description": "a Sails application",
+  "version": "0.0.1",
+  "description": "A Sails application that simulates an automotive data center",
   "keywords": [],
   "dependencies": {
     "async": "2.0.1",
@@ -24,10 +24,18 @@
     "eslint": "4.11.0"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
-    "lint": "node ./node_modules/eslint/bin/eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your code looks good.'",
-    "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
+    "lint": "node ./node_modules/eslint/bin/eslint . --max-warnings=0 && echo '✔  Your code looks good.'",
+    "design": "java -jar docs/plantuml.jar docs/*.puml docs/**/*.puml",
+    "custom-tests": "node ./node_modules/mocha/bin/mocha test/bootstrap.test.js test/integration/**/*.test.js",
+    "build": "npm update && node ./deploy/build build",
+    "build-doc": "cd docs && gwtc . -t fleet --css doc.css",
+    "debug": "node debug app.js",
+    "deploy-apps": "node ./deploy/build deploy",
+    "deploy": "npm run-script deploy-apps && docker stack deploy --compose-file=./deploy/docker-compose-dev.yaml fleetDev",
+    "deploy-test": "npm run-script deploy-apps && docker stack deploy --compose-file=./deploy/docker-compose-test.yaml fleetTest",
+    "deploy-prod": "npm run-script deploy-apps && docker stack deploy --compose-file=./deploy/docker-compose-prod.yaml fleet"
   },
   "main": "app.js",
   "repository": {
