--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint": "4.11.0"
   },
   "scripts": {
-    "start": "NODE_ENV=production node app.js",
+    "start": "node app.js",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "node ./node_modules/eslint/bin/eslint . --max-warnings=0 && echo '✔  Your code looks good.'",
     "design": "java -jar docs/plantuml.jar docs/*.puml docs/**/*.puml",
