--- a/assets/policy.yaml
+++ b/assets/policy.yaml
@@ -1,20 +1,20 @@
 policy:
   triggers:
-   -  events: tps
-      action: sails.helpers.incService('ingestion', 10);
+   -  events: accidents
+      action: sails.helpers.incService('ingestion', 10);sails.helpers.decService('analytics', 4);
       condition: events.value>100
-   -  events: tps
-      action: sails.helpers.incService('ingestion', 10);
+   -  events: accidents
+      action: sails.helpers.incService('ingestion', 10);sails.helpers.decService('analytics', 4);
       condition: events.value>200
-   -  events: tps
-      action: sails.helpers.incService('ingestion', 10);
+   -  events: accidents
+      action: sails.helpers.incService('ingestion', 10);sails.helpers.decService('analytics', 4);
       condition: events.value>300
-   -  events: tps
-      action: sails.helpers.decService('ingestion', 10);
+   -  events: accidents
+      action: sails.helpers.decService('ingestion', 10);sails.helpers.incService('analytics', 4);
       condition: events.value<100
-   -  events: tps
-      action: sails.helpers.decService('ingestion', 10);
+   -  events: accidents
+      action: sails.helpers.decService('ingestion', 10);sails.helpers.incService('analytics', 4);
       condition: events.value<200
-   -  events: tps
-      action: sails.helpers.decService('ingestion', 10);
+   -  events: accidents
+      action: sails.helpers.decService('ingestion', 10);sails.helpers.incService('analytics', 4);
       condition: events.value<300
