Adding Policy model.

--- a/deploy/uservices/web/package.json
+++ b/deploy/uservices/web/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ginteil",
+  "name": "fleet",
   "private": true,
-  "version": "0.0.0",
-  "description": "a Sails application",
+  "version": "0.0.1",
+  "description": "An automotive hybrid cloud data center simulator",
   "keywords": [],
   "dependencies": {
     "async": "2.0.1",
@@ -30,8 +30,8 @@
     "lint": "node ./node_modules/eslint/bin/eslint . --max-warnings=0 && echo '✔  Your code looks good.'",
     "debug": "node debug app.js",
     "build-uservices": "node ./deploy/build",
-    "build": "cd ../../.. && docker build . --file ./deploy/uservices/web/Dockerfile -t madajaju/fleet-web",
-    "deploy": "docker push madajaju/fleet-web"
+    "build": "cd ../../.. && docker build . --file ./deploy/uservices/web/Dockerfile -t madajaju/fleet",
+    "deploy": "docker push madajaju/fleet"
   },
   "main": "app.js",
   "repository": {
